# InviteEase

./: .env.example  .gitignore  Makefile  README.md  compose.yml  manage.py  pyproject.toml
docker/: Dockerfile  entrypoint.sh
guests/: admin.py  consumers.py  forms.py  models.py  routing.py  urls.py  views.py
guests/migrations/: 0001_initial.py  0002_guest_detail.py
guests/static/guests/js/: desk.js  screen.js
guests/templates/guests/: dashboard.html  desk.html  guest_list.html  login.html  screen.html  test.html
inviteease/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
sample/: guests.csv
